<resources>
    <string name="app_name">Time Gradient</string>
    <string name="action_settings">Settings</string>
    <string name="wallpaper_desc">Time Gradient Live Wallpaper</string>
    <string name="pref_group_settings">App Settings</string>
    <string name="pref_group_about">About</string>
    <string name="pref_endcolor">Gradient End Color</string>
    <string name="pref_endcolor_desc">Select end color for the gradient</string>
    <string name="pref_version">App Version</string>
    <string name="pref_website">Visit Developer\'s Website</string>
    <string name="pref_display_noti">Display Notifications</string>
    <string name="pref_display_noti_desc">Use app icon\'s color from the notification as gradient end color temporary.</string>
    <string name="accessibility_desc">Notification Detector : Uses the color of the app that posted a notification</string>
    <string name="pref_info_notiaccess">To use this feature, turn the notification access on.</string>
    <string name="pref_info_accessibility">To use this feaure, turn the accessibility service on.</string>
</resources>
