<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
    <PreferenceCategory
        android:title="@string/pref_group_settings">
        <Preference
            android:key="color_end"
            android:title="@string/pref_endcolor"
            android:summary="@string/pref_endcolor_desc"
            android:defaultValue="#ffffff"/>
        <CheckBoxPreference
            android:key="display_noti"
            android:title="@string/pref_display_noti"
            android:summary="@string/pref_display_noti_desc"
            android:defaultValue="false"/>
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/pref_group_about">
        <Preference
            android:key="app_ver"
            android:title="@string/pref_version"
            android:summary="APP_VERSION"/>
        <Preference
            android:title="@string/pref_website">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="http://youngbin.xyz"/>
        </Preference>
    </PreferenceCategory>
</PreferenceScreen>